<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblBillTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/lbl_bill_total_with_tax"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Bill Total with Tax" />

    <TextView
        android:id="@+id/lblTipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/lbl_tip_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBillTotal" />

    <TextView
        android:id="@+id/lblTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/lbl_tip_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTipPercent" />

    <TextView
        android:id="@+id/lblTotalWithTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/lbl_total_with_tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTipAmount" />

    <TextView
        android:id="@+id/lblNumberPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/lbl_number_of_people"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTotalWithTip" />

    <TextView
        android:id="@+id/lblTotalPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/lbl_total_per_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNumberPeople" />

    <TextView
        android:id="@+id/lblOverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/lbl_overage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTotalPerPerson" />

    <EditText
        android:id="@+id/txtNoPeople"
        android:layout_width="111dp"
        android:layout_height="51dp"
        android:layout_marginEnd="99dp"
        android:autofillHints=""
        android:background="@color/mint"
        android:ems="10"
        android:hint="@string/txt_no_people"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/btnRecalc"
        app:layout_constraintTop_toTopOf="@+id/lblNumberPeople"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/calcTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblTipAmount"
        tools:text="Tip Amount" />

    <TextView
        android:id="@+id/calcTotalWTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblTotalWithTip"
        tools:text="Total With Tip" />

    <TextView
        android:id="@+id/calctotalPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblTotalPerPerson"
        tools:text="Total per person" />

    <TextView
        android:id="@+id/calcOverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblOverage"
        tools:text="Overage" />

    <Button
        android:id="@+id/btnRecalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_go"
        app:layout_constraintTop_toTopOf="@+id/lblNumberPeople"
        tools:layout_editor_absoluteX="191dp" />
</androidx.constraintlayout.widget.ConstraintLayout>